// Copyright 2024 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package main;

option go_package = "github.com/GoogleCloudPlatform/finance-research-risk-examples/examples/risk/loadtest;main";

message LoadResult {

  message Status {
    int64 id = 1;
    bytes payload = 2;

    // Compute stats
    int64 compute_micros = 3;

    // IO stats
    int64 files_read = 4;;
    int64 bytes_read = 5;
    int64 bytes_written = 6;

    // Total time taken
    int64 total_micros = 7;
  }

  Status init = 1;
  Status task = 2;
  string host = 3;
}
